Refactor `playerNames.get(0)` to `playerNames.getFirst()` and improve code readability with `Deque` method usage. Add lazy loading for `gameState` in `Game` entity.